[package]
name = "nario"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.2", features = ["dynamic_linking"] }
rand = "0.8.5"
bevy_rapier2d = { version = "0.22.0", features = ["simd-stable", "debug-render-2d"] }
bevy_ecs_ldtk = "0.8.0"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
